--- a/src/mr_path_planning/package.xml
+++ b/src/mr_path_planning/package.xml
@@ -11,6 +11,8 @@
   <depend>geometry_msgs</depend>
   <depend>visualization_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>nav2_bringup</depend>
+  <depend>nav_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
